Hotkey changings between 2.63 and 2.64 problem #33227

Closed
opened 2012-11-19 11:01:00 +01:00 by Reiner Prokein · 6 comments

%%%r52207, Win 7, 64 Bit

I stumbled across some changings in the hotkeys between 2.63 and 2.64. And they make trouble now because i have very heavily modified user preferences.

When a new version appears you can choose in the splash screen to use the old configuration. I did this, and some of my hotkeys didnt work anymore then. Shouldnt Blender warn me about changings in the hotkeys when using the old configuration? Ideally telling me at which items the changings happened so that i can fix them one by one?

The bug here is that Blender should at least transfer existing hotkeys. Which didnt work here for camera and my custom hotkey "Numpad ," for it. It jumped back to the standard "Numpad 0" hotkey. And blocked the other "Numpad 0" hotkey by that, which i had connected to View Selected. Same goes for the Set 3D Cursor, which i had connected with "Alt+Action mouse". It jumped back to the standard "Action mouse" only hotkey, blocking now my Action Mouse action to move the view with right mouse button. And i dont know which hotkeys are back at default settings too. Time will tell.

Attached the whole 2.63 folder from my Appdata path, including the default.blend. That way you should be able to load this old configuration into Blender 2.64 and compare it with 2.63. As told, i had switched the View Selected with the Camera View button. So that one`s easily comparable. I rarely use the Camera View, but heavily the View Selected. And the zero button is the bigger button ...

And attached is a screenshot from two things that are different now between the versions. What is the second View Selected entry good for?%%%

%%%r52207, Win 7, 64 Bit I stumbled across some changings in the hotkeys between 2.63 and 2.64. And they make trouble now because i have very heavily modified user preferences. When a new version appears you can choose in the splash screen to use the old configuration. I did this, and some of my hotkeys didn`t work anymore then. Shouldn`t Blender warn me about changings in the hotkeys when using the old configuration? Ideally telling me at which items the changings happened so that i can fix them one by one? The bug here is that Blender should at least transfer existing hotkeys. Which didn`t work here for camera and my custom hotkey "Numpad ," for it. It jumped back to the standard "Numpad 0" hotkey. And blocked the other "Numpad 0" hotkey by that, which i had connected to View Selected. Same goes for the Set 3D Cursor, which i had connected with "Alt+Action mouse". It jumped back to the standard "Action mouse" only hotkey, blocking now my Action Mouse action to move the view with right mouse button. And i don`t know which hotkeys are back at default settings too. Time will tell. Attached the whole 2.63 folder from my Appdata path, including the default.blend. That way you should be able to load this old configuration into Blender 2.64 and compare it with 2.63. As told, i had switched the View Selected with the Camera View button. So that one`s easily comparable. I rarely use the Camera View, but heavily the View Selected. And the zero button is the bigger button ... And attached is a screenshot from two things that are different now between the versions. What is the second View Selected entry good for?%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is not always possible to copy hotkeys from older version to newer -- for example in cases when oeprator's properties were changed (and some operators' properties were changed from 2.63 to 2.64). So in general it's not always solvable. Maybe could be done something with your particular cases.

Brecht knows this area much better than me, so will assign to him.%%%

%%%This is not always possible to copy hotkeys from older version to newer -- for example in cases when oeprator's properties were changed (and some operators' properties were changed from 2.63 to 2.64). So in general it's not always solvable. Maybe could be done something with your particular cases. Brecht knows this area much better than me, so will assign to him.%%%
Author

%%%Thanks Sergey :)

Yes i know. I stumbled across it because some of my hotkeys turned disfunctional. As told, to have at least a warning would be nice. A hint that this and that hotkey could have stopped working because of internal changings. I cannot see those changings. What i see is that my hotkeys stops working.

Things would be much easier when Blender would have a proper hotkey tool that tells me for example when a hotkey is already in use by another tool. Or when the search function in the hotkey panel would really work in an useful way. But it even misses items in the same section. Search for numpad to see what i mean. As it is now maintaining hotkeys is a pain. Even without the jumps between the versions that mixes up the hotkeys then.%%%

%%%Thanks Sergey :) Yes i know. I stumbled across it because some of my hotkeys turned disfunctional. As told, to have at least a warning would be nice. A hint that this and that hotkey could have stopped working because of internal changings. I cannot see those changings. What i see is that my hotkeys stops working. Things would be much easier when Blender would have a proper hotkey tool that tells me for example when a hotkey is already in use by another tool. Or when the search function in the hotkey panel would really work in an useful way. But it even misses items in the same section. Search for numpad to see what i mean. As it is now maintaining hotkeys is a pain. Even without the jumps between the versions that mixes up the hotkeys then.%%%

%%%Fixed the keymap syncing in the cases mentioned here. Further, we know the keymap editor can use improvements, but that's outside of the scope of bug reports.%%%

%%%Fixed the keymap syncing in the cases mentioned here. Further, we know the keymap editor can use improvements, but that's outside of the scope of bug reports.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Guys, you have a great hot keys editor! It's UI + abilities to "hotkey" almost everything is very handy.
On my new job I've start to adapting 3dsMax's keymap to Blender's... It's not good there if to say polite.
Daz3D - simply awful... like preferences in MS Word.
SolidWorks - one key can be used only for one operation.
Blender beats them all! Because you allowed to choose the same keys between different modes and editors inside Blender.

If I could measure a "readiness" of different parts of Blender then it's keymap editor gets ~99% IMHO
Some little things like these only shows that you make a constant and quick progress to Blender.
Thanks a lot!%%%

%%%Guys, you have a great hot keys editor! It's UI + abilities to "hotkey" almost everything is very handy. On my new job I've start to adapting 3dsMax's keymap to Blender's... It's not good there if to say polite. Daz3D - simply awful... like preferences in MS Word. SolidWorks - one key can be used only for one operation. Blender beats them all! Because you allowed to choose the same keys between different modes and editors inside Blender. If I could measure a "readiness" of different parts of Blender then it's keymap editor gets ~99% IMHO Some little things like these only shows that you make a constant and quick progress to Blender. Thanks a lot!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33227
No description provided.