Fix #33227: custom keymap syncing didn't work well always when adding/removing properties from operator, now it compares at RNA rather than ID property level, which is more accurate.